mdapipkg/objects/Contact_Event__c.object
<CustomObject>
    <fields>
        <fullName>CVent_ID__c</fullName>
        <label>CVent ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_External_ID__c</fullName>
        <description>For migration only</description>
        <externalId>true</externalId>
        <label>Contact External ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Events</relationshipLabel>
        <relationshipName>Contact_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Validated__c</fullName>
        <label>Date Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_External_ID__c</fullName>
        <description>This is for migration purposes only</description>
        <externalId>true</externalId>
        <label>Event External ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Contact Events</relationshipLabel>
        <relationshipName>Contact_Events</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Guests__c</fullName>
        <label>Guests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Voucher_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_YPO_WPO_Event_attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For functional purpose, as asked by Jonathan</description>
        <label>YPO/YPO Gold Event attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Format__c</fullName>
        <formula>TEXT( Event__r.Program_Format__c )</formula>
        <label>Program Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <label>Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>CVent_ID__c</columns>
        <columns>Is_Attended__c</columns>
        <columns>Date_Registered__c</columns>
        <columns>Date_Validated__c</columns>
        <columns>Program_Format__c</columns>
        <columns>Event__c</columns>
        <columns>Event_External_ID__c</columns>
        <columns>Guests__c</columns>
        <columns>GUID__c</columns>
        <columns>Registration_Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ty_Cvent</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Confirmation_Number__c</columns>
        <columns>CVent_ID__c</columns>
        <columns>Is_Attended__c</columns>
        <columns>Date_Registered__c</columns>
        <columns>Date_Validated__c</columns>
        <columns>Program_Format__c</columns>
        <columns>Event__c</columns>
        <columns>Guests__c</columns>
        <columns>GUID__c</columns>
        <columns>Registration_Status__c</columns>
        <columns>Type__c</columns>
        <columns>Is_Voucher_Used__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CVent_ID__c</field>
            <operation>contains</operation>
            <value>-</value>
        </filters>
        <label>Ty Cvent</label>
    </listViews>
    <nameField>
        <displayFormat>CEV-{0000}</displayFormat>
        <label>Contact Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Events</pluralLabel>
    <recordTypes>
        <fullName>Current</fullName>
        <active>true</active>
        <label>Current</label>
    </recordTypes>
    <recordTypes>
        <fullName>History</fullName>
        <active>true</active>
        <label>History</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>